# cuda_ops

./: CMakeLists.txt  README.md
.cache/clangd/index/: combined_access.cu.BCF0B2029E073FBC.idx  reduce_compare.cu.372A5CF54CF6368C.idx  reduce_v0_global_mem.cu.0081BBE37BAEA027.idx  reduce_v1_shared_mem.cu.FF9EC4AEDD3DDD38.idx  reduce_v2_no_divergence_branch.cu.ED27778353A43648.idx  reduce_v3_no_bank_conflict.cu.5F97DB70B25568D9.idx  reduce_v4_add_during_load_A.cu.DA8DFE2353755E2C.idx  reduce_v4_add_during_load_B.cu.78C74873A3C9DC79.idx  reduce_v5_unroll_last_warp.cu.EDBF28253754A375.idx  reduce_v6_completely_unroll.cu.4B2B00B1D5E7CF4F.idx  reduce_v7_block_num.cu.02DE9BE1D930083D.idx  reduce_v8_shuffle.cu.92288C4EEF6B7867.idx  sgemm.cu.AD3875C71ED05C49.idx  sgemm_v0_global_mem.cu.C15A265F78C15066.idx  sgemm_v0_global_mem.cuh.DFF19E12C9555FB7.idx  sgemm_v1_shared_mem.cu.8AD85B2E984E5125.idx  sgemm_v1_shared_mem.cuh.7C0F5313B8984047.idx  sgemm_v2_increase_workload_of_threads.cu.EAB6FF4EC53CA7A2.idx  sgemm_v2_increase_workload_of_threads.cuh.5F4E81F0EBB5FE52.idx  sgemm_v3_float4.cu.3180143533483A6B.idx  sgemm_v3_float4.cuh.79C54FACECCD34F6.idx  sgemm_v4_reg.cu.0E227F2C983E09AD.idx  sgemm_v4_reg.cuh.2532493A293DD319.idx  sgemm_v5_reg_float4.cu.D01255D761E1C26D.idx  sgemm_v5_reg_float4.cuh.BD9833AD0F7A94F1.idx  sgemm_v6_transpose_A_smem.cu.90AD4EDA4DEE096A.idx  sgemm_v6_transpose_A_smem.cuh.02B304DD160C64E3.idx  sgemm_v7_double_buffer.cu.33E2E92C3024A5D5.idx  sgemm_v7_double_buffer.cuh.F0604ABF7FE08DD3.idx  transpose.cu.7BD84595184ADAF6.idx  utils.cpp.21B141BCF30CE6A7.idx  utils.hpp.08ADFA1117E326F0.idx
ncu_profile/: CMakeLists.txt  combined_access.cu  transpose.cu
ncu_profile/ncu_output/: combined_access.ncu-rep  reduce_v0_global_mem.ncu-rep  reduce_v4_A.ncu-rep  reduce_v4_B.ncu-rep  reduce_v7_block_num.ncu-rep  reduce_v8_shuffle.ncu-rep  transpose.ncu-rep  transpose_v1_naive.ncu-rep
reduce/: CMakeLists.txt  reduce_compare.cu  reduce_v0_global_mem.cu  reduce_v1_shared_mem.cu  reduce_v2_no_divergence_branch.cu  reduce_v3_no_bank_conflict.cu  reduce_v4_add_during_load_A.cu  reduce_v4_add_during_load_B.cu  reduce_v5_unroll_last_warp.cu  reduce_v6_completely_unroll.cu  reduce_v7_block_num.cu  reduce_v8_shuffle.cu
sgemm/: CMakeLists.txt
sgemm/include/: sgemm_comp.cuh  sgemm_utils.hpp  sgemm_v0_global_mem.cuh  sgemm_v1_shared_mem.cuh  sgemm_v2_increase_workload_of_threads.cuh  sgemm_v3_float4.cuh  sgemm_v4_reg.cuh  sgemm_v5_reg_float4.cuh  sgemm_v6_transpose_A_smem.cuh  sgemm_v7_double_buffer.cuh  sgemm_v8_double_reg.cuh
sgemm/ncu_rep/: sgemm_v7.ncu-rep
sgemm/src/: sgemm.cu  sgemm_comp.cu  sgemm_utils.cpp  sgemm_v0_global_mem.cu  sgemm_v1_shared_mem.cu  sgemm_v2_increase_workload_of_threads.cu  sgemm_v3_float4.cu  sgemm_v4_reg.cu  sgemm_v5_reg_float4.cu  sgemm_v6_transpose_A_smem.cu  sgemm_v7_double_buffer.cu  sgemm_v8_double_reg.cu  utils.cpp
sgemv/: CMakeLists.txt
sgemv/include/: sgemv_utils.hpp  sgemv_v0_32.cuh  sgemv_v1_float4.cuh  sgemv_v2_16.cuh
sgemv/ncu_rep/: sgemv128.ncu-rep  sgemv16.ncu-rep  sgemv32.ncu-rep  test.ncu-rep
sgemv/src/: sgemv.cu  sgemv_utils.cpp  sgemv_v0_32.cu  sgemv_v1_float4.cu  sgemv_v2_16.cu
